test preloader svg

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .circular {
     animation: rotate 3.5s linear infinite;
+/*
     height: 50px;
     transform-origin: center center;
     width: 50px;
@@ -10,6 +11,7 @@
     right: 0;
     margin: auto;
     background-color:
+*/
 }
 
 .donut-segment {
@@ -27,6 +29,7 @@
 }
 
 
+/*
 .donut {
     width: 50px;
     height: 100px;
@@ -36,8 +39,10 @@
     right: 0;
     position: absolute;
 }
+*/
 
 
+/*
 .donut-segment1 {
     fill: transparent;
     stroke: #111;
@@ -46,7 +51,9 @@
     stroke-dashoffset: 0;
     animation: hide 3s linear infinite;
 }
+*/
 
+/*
 .donut-segment2 {
     fill: transparent;
     stroke: #111;
@@ -55,6 +62,7 @@
     stroke-dashoffset: 20;
     animation: hide 3s linear 0.6s infinite;
 }
+*/
 
 .donut-segment3 {
     fill: transparent;
@@ -67,22 +75,23 @@
 
 .donut-segment4 {
     fill: transparent;
-    /*    stroke: #111;*/
+/*    stroke: #111;*/
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 60;
-    /*    animation: hide 3s linear 1.8s infinite;*/
+/*    animation: hide 3s linear 1.8s infinite;*/
 }
 
 .donut-segment5 {
     fill: transparent;
-    /*    stroke: #111;*/
+/*    stroke: #111;*/
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 80;
-    /*    animation: hide 3s linear 2.4s infinite;*/
+/*    animation: hide 3s linear 2.4s infinite;*/
 }
 
+/*
 @keyframes hide {
     0% {
         opacity: 1;
@@ -101,4 +110,4 @@
     100% {
         opacity: 0;
     }
-}
+}*/
