--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
+/*
 .loader {
     border: 16px solid #f3f3f3;
-    /* Light grey */
     border-top: 16px solid #3498db;
-    /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
 }
+*/
 
+/*
 @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -17,11 +18,45 @@
         transform: rotate(360deg);
     }
 }
+*/
+
+.loader {
+    border: 16px solid #f3f3f3;
+    /* Light grey */
+    border-top: 16px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 
 
-.circular {
-    animation: rotate 3.5s infinite;
-    /*
+    .circular {
+        animation: rotate 3.5s infinite;
+        /*
     height: 50px;
     transform-origin: center center;
     width: 50px;
@@ -33,24 +68,24 @@
     margin: auto;
     background-color:
 */
-}
-
-.donut-segment {
-    fill: transparent;
-    stroke: #4A4A4A;
-    stroke-width: 3;
-    stroke-dasharray: 20 80;
-    stroke-dashoffset: 0;
-}
-
-@keyframes rotate {
-    100% {
-        transform: rotate(360deg);
     }
-}
+
+    .donut-segment {
+        fill: transparent;
+        stroke: #4A4A4A;
+        stroke-width: 3;
+        stroke-dasharray: 20 80;
+        stroke-dashoffset: 0;
+    }
+
+    @keyframes rotate {
+        100% {
+            transform: rotate(360deg);
+        }
+    }
 
 
-/*
+    /*
 .donut {
     width: 50px;
     height: 100px;
@@ -61,8 +96,7 @@
     position: absolute;
 }
 */
-
-/*
+    /*
 .donut-segment1 {
     fill: transparent;
     stroke: #111;
@@ -72,8 +106,7 @@
     animation: hide 3s linear infinite;
 }
 */
-
-/*
+    /*
 .donut-segment2 {
     fill: transparent;
     stroke: #111;
@@ -83,35 +116,34 @@
     animation: hide 3s linear 0.6s infinite;
 }
 */
+    .donut-segment3 {
+        fill: transparent;
+        stroke: #111;
+        stroke-width: 3;
+        stroke-dasharray: 20 80;
+        stroke-dashoffset: 40;
+        animation: hide 3s linear 1.2s infinite;
+    }
 
-.donut-segment3 {
-    fill: transparent;
-    stroke: #111;
-    stroke-width: 3;
-    stroke-dasharray: 20 80;
-    stroke-dashoffset: 40;
-    animation: hide 3s linear 1.2s infinite;
-}
+    .donut-segment4 {
+        fill: transparent;
+        /*    stroke: #111;*/
+        stroke-width: 3;
+        stroke-dasharray: 20 80;
+        stroke-dashoffset: 60;
+        /*    animation: hide 3s linear 1.8s infinite;*/
+    }
 
-.donut-segment4 {
-    fill: transparent;
-    /*    stroke: #111;*/
-    stroke-width: 3;
-    stroke-dasharray: 20 80;
-    stroke-dashoffset: 60;
-    /*    animation: hide 3s linear 1.8s infinite;*/
-}
+    .donut-segment5 {
+        fill: transparent;
+        /*    stroke: #111;*/
+        stroke-width: 3;
+        stroke-dasharray: 20 80;
+        stroke-dashoffset: 80;
+        /*    animation: hide 3s linear 2.4s infinite;*/
+    }
 
-.donut-segment5 {
-    fill: transparent;
-    /*    stroke: #111;*/
-    stroke-width: 3;
-    stroke-dasharray: 20 80;
-    stroke-dashoffset: 80;
-    /*    animation: hide 3s linear 2.4s infinite;*/
-}
-
-/*
+    /*
 @keyframes hide {
     0% {
         opacity: 1;
