--- a/style.css
+++ b/style.css
@@ -21,16 +21,34 @@
 */
 
 .loader {
-    border: 16px solid #f3f3f3;
-    /* Light grey */
-    border-top: 16px solid #3498db;
-    /* Blue */
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    border: 4px solid #cccccc;
+    border-radius: 50%;
+    border-top-color: #333333;
+    box-sizing: border-box;
+    content: '';
+    height: 40px;
+    left: 50%;
+    margin-left: -10px;
+    margin-top: -10px;
+    position: absolute;
+    top: 50%;
+    width: 40px;
+}
+
+/*
+.loader {
+    border: 16px solid #9B9B9B;
+    border-top: 16px solid #2C2C2C;
     border-radius: 50%;
     width: 120px;
     height: 120px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
+
 }
+*/
 
 @-webkit-keyframes spin {
     0% {
@@ -53,10 +71,11 @@
         transform: rotate(360deg);
     }
 
+}
 
-    .circular {
-        animation: rotate 3.5s infinite;
-        /*
+.circular {
+    animation: rotate 3.5s infinite;
+    /*
     height: 50px;
     transform-origin: center center;
     width: 50px;
@@ -68,24 +87,24 @@
     margin: auto;
     background-color:
 */
+}
+
+.donut-segment {
+    fill: transparent;
+    stroke: #4A4A4A;
+    stroke-width: 3;
+    stroke-dasharray: 20 80;
+    stroke-dashoffset: 0;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
     }
-
-    .donut-segment {
-        fill: transparent;
-        stroke: #4A4A4A;
-        stroke-width: 3;
-        stroke-dasharray: 20 80;
-        stroke-dashoffset: 0;
-    }
-
-    @keyframes rotate {
-        100% {
-            transform: rotate(360deg);
-        }
-    }
+}
 
 
-    /*
+/*
 .donut {
     width: 50px;
     height: 100px;
@@ -96,7 +115,8 @@
     position: absolute;
 }
 */
-    /*
+
+/*
 .donut-segment1 {
     fill: transparent;
     stroke: #111;
@@ -106,7 +126,8 @@
     animation: hide 3s linear infinite;
 }
 */
-    /*
+
+/*
 .donut-segment2 {
     fill: transparent;
     stroke: #111;
@@ -116,34 +137,35 @@
     animation: hide 3s linear 0.6s infinite;
 }
 */
-    .donut-segment3 {
-        fill: transparent;
-        stroke: #111;
-        stroke-width: 3;
-        stroke-dasharray: 20 80;
-        stroke-dashoffset: 40;
-        animation: hide 3s linear 1.2s infinite;
-    }
 
-    .donut-segment4 {
-        fill: transparent;
-        /*    stroke: #111;*/
-        stroke-width: 3;
-        stroke-dasharray: 20 80;
-        stroke-dashoffset: 60;
-        /*    animation: hide 3s linear 1.8s infinite;*/
-    }
+.donut-segment3 {
+    fill: transparent;
+    stroke: #111;
+    stroke-width: 3;
+    stroke-dasharray: 20 80;
+    stroke-dashoffset: 40;
+    animation: hide 3s linear 1.2s infinite;
+}
 
-    .donut-segment5 {
-        fill: transparent;
-        /*    stroke: #111;*/
-        stroke-width: 3;
-        stroke-dasharray: 20 80;
-        stroke-dashoffset: 80;
-        /*    animation: hide 3s linear 2.4s infinite;*/
-    }
+.donut-segment4 {
+    fill: transparent;
+    /*    stroke: #111;*/
+    stroke-width: 3;
+    stroke-dasharray: 20 80;
+    stroke-dashoffset: 60;
+    /*    animation: hide 3s linear 1.8s infinite;*/
+}
 
-    /*
+.donut-segment5 {
+    fill: transparent;
+    /*    stroke: #111;*/
+    stroke-width: 3;
+    stroke-dasharray: 20 80;
+    stroke-dashoffset: 80;
+    /*    animation: hide 3s linear 2.4s infinite;*/
+}
+
+/*
 @keyframes hide {
     0% {
         opacity: 1;
