--- a/style.css
+++ b/style.css
@@ -21,20 +21,20 @@
 */
 
 .loader {
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-    border: 4px solid #cccccc;
+    -webkit-animation: spin 3.5s linear infinite;
+    animation: spin 3.5s linear infinite;
+    border: 3px solid #CCCCCC;
     border-radius: 50%;
-    border-top-color: #333333;
+    border-top-color: #2C2C2C;
     box-sizing: border-box;
     content: '';
-    height: 40px;
-    left: 50%;
+    height: 44px;
+    left: 44%;
     margin-left: -10px;
     margin-top: -10px;
     position: absolute;
     top: 50%;
-    width: 40px;
+    width: 44px;
 }
 
 /*
