--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
 */
 
 .loader {
-    -webkit-animation: spin 3.5s linear infinite;
-    animation: spin 3.5s linear infinite;
+    -webkit-animation: spin 2.5s linear infinite;
+    animation: spin 2.5s linear infinite;
     border: 3px solid #CCCCCC;
     border-radius: 50%;
     border-top-color: #2C2C2C;
@@ -51,10 +51,12 @@
 */
 
 @-webkit-keyframes spin {
+/*
     0% {
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
+*/
     100% {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
@@ -62,10 +64,12 @@
 }
 
 @keyframes spin {
+/*
     0% {
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
+*/
     100% {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
