--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@
 */
 
 .loader {
-    -webkit-animation: spin 16s linear infinite;
-    animation: spin 16s linear infinite;
-    border: 4px solid #FFF;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    border: 4px solid #EFEFEF;
     border-radius: 50%;
     border-top-color: #2C2C2C;
     box-sizing: border-box;
@@ -124,7 +124,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 0;
     animation: hide 3s linear infinite;
-    -webkit-animation: hide 10s linear infinite;
+    -webkit-animation: hide 5s linear infinite;
 }
 
 .donut-segment2 {
@@ -134,7 +134,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 20;
     animation: hide 3s linear 0.6s infinite;
-    -webkit-animation: hide 10s linear 2s infinite;
+    -webkit-animation: hide 5s linear 1s infinite;
 }
 
 .donut-segment3 {
@@ -144,7 +144,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 40;
     animation: hide 3s linear 1.2s infinite;
-    -webkit-animation: hide 10s linear 4s infinite;
+    -webkit-animation: hide 5s linear 2s infinite;
 }
 
 .donut-segment4 {
@@ -154,7 +154,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 60;
     animation: hide 3s linear 1.8s infinite;
-    -webkit-animation: hide 10s linear 6s infinite;
+    -webkit-animation: hide 5s linear 3s infinite;
 }
 
 .donut-segment5 {
@@ -164,7 +164,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 80;
     animation: hide 3s linear 2.4s infinite;
-    -webkit-animation: hide 10s linear 8s infinite;
+    -webkit-animation: hide 5s linear 4s infinite;
 }
 
 
@@ -173,7 +173,7 @@
         opacity: 1;
     }
     25% {
-        opacity: 0.2;
+        opacity: 0;
     }
     50% {
         opacity: 0;
@@ -193,7 +193,7 @@
         opacity: 1;
     }
     25% {
-        opacity: 0.2;
+        opacity: 0;
     }
     50% {
         opacity: 0;
