--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
 */
 
 .loader {
-    -webkit-animation: spin 1s linear infinite;
-    animation: spin 1s linear infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+    animation: spin 1s ease-in-out infinite;
     border: 4px solid #EFEFEF;
     border-radius: 50%;
     border-top-color: #2C2C2C;
