--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@
 */
 
 .loader {
-    -webkit-animation: spin 1s ease-in-out infinite;
-    animation: spin 1s ease-in-out infinite;
-    border: 4px solid #EFEFEF;
+    -webkit-animation: spin 1.1s linear infinite;
+    animation: spin 1.1s linear infinite;
+    border: 4px solid #E8E8E8;
     border-radius: 50%;
     border-top-color: #2C2C2C;
     box-sizing: border-box;
@@ -125,7 +125,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 0;
     animation: hide 3s linear infinite;
-    -webkit-animation: hide 5s linear infinite;
+    -webkit-animation: hide 3s linear infinite;
 }
 
 .donut-segment2 {
@@ -136,7 +136,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 20;
     animation: hide 3s linear 0.6s infinite;
-    -webkit-animation: hide 5s linear 1s infinite;
+    -webkit-animation: hide 3s linear 0.6s infinite;
 }
 
 .donut-segment3 {
@@ -147,7 +147,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 40;
     animation: hide 3s linear 1.2s infinite;
-    -webkit-animation: hide 5s linear 2s infinite;
+    -webkit-animation: hide 3s linear 1.2s infinite;
 }
 
 .donut-segment4 {
@@ -158,7 +158,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 60;
     animation: hide 3s linear 1.8s infinite;
-    -webkit-animation: hide 5s linear 3s infinite;
+    -webkit-animation: hide 3s linear 1.8s infinite;
 }
 
 .donut-segment5 {
@@ -169,7 +169,7 @@
     stroke-dasharray: 20 80;
     stroke-dashoffset: 80;
     animation: hide 3s linear 2.4s infinite;
-    -webkit-animation: hide 5s linear 4s infinite;
+    -webkit-animation: hide 3s linear 2.4s infinite;
 }
 
 
