--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
 */
 
 .loader {
-    -webkit-animation: spin 1.1s linear infinite;
-    animation: spin 1.1s linear infinite;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
     border: 4px solid #E8E8E8;
     border-radius: 50%;
-    border-top-color: #2C2C2C;
+    border-top-color: #4A4A4A;
     box-sizing: border-box;
     content: '';
     height: 44px;
@@ -120,56 +120,56 @@
 .donut-segment1 {
     fill: transparent;
     opacity: 0;
-    stroke: #111;
+    stroke: #4A4A4A;
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 0;
     animation: hide 3s linear infinite;
-    -webkit-animation: hide 3s linear infinite;
+    -webkit-animation: hide 1s linear infinite;
 }
 
 .donut-segment2 {
     fill: transparent;
     opacity: 0;
-    stroke: #111;
+    stroke: #4A4A4A;
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 20;
     animation: hide 3s linear 0.6s infinite;
-    -webkit-animation: hide 3s linear 0.6s infinite;
+    -webkit-animation: hide 1s linear 0.2s infinite;
 }
 
 .donut-segment3 {
     fill: transparent;
     opacity: 0;
-    stroke: #111;
+    stroke: #4A4A4A;
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 40;
     animation: hide 3s linear 1.2s infinite;
-    -webkit-animation: hide 3s linear 1.2s infinite;
+    -webkit-animation: hide 1s linear 0.4s infinite;
 }
 
 .donut-segment4 {
     fill: transparent;
     opacity: 0;
-    stroke: #111;
+    stroke: #4A4A4A;
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 60;
     animation: hide 3s linear 1.8s infinite;
-    -webkit-animation: hide 3s linear 1.8s infinite;
+    -webkit-animation: hide 1s linear 0.6s infinite;
 }
 
 .donut-segment5 {
     fill: transparent;
     opacity: 0;
-    stroke: #111;
+    stroke: #4A4A4A;
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 80;
     animation: hide 3s linear 2.4s infinite;
-    -webkit-animation: hide 3s linear 2.4s infinite;
+    -webkit-animation: hide 1s linear 0.8s infinite;
 }
 
 
