--- a/style.css
+++ b/style.css
@@ -157,8 +157,8 @@
     }
 */
     100% {
-        -webkit-transform: rotate(360 59 71);
-        transform: rotate(360deg 59 71);
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
@@ -171,7 +171,7 @@
     }
 */
     100% {
-        -webkit-transform: rotate(360 59 71);
+        -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 
