--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@
     left: 0;
     right: 0;
     position: absolute;
-    animation: spin2 2s linear infinite;
-    -webkit-animation: spin2 2s linear infinite;
+    animation: spin 2s linear infinite;
+    -webkit-animation: spin 2s linear infinite;
 }
 
 .donut-segment1 {
@@ -142,10 +142,7 @@
     stroke-width: 3;
     stroke-dasharray: 20 80;
     stroke-dashoffset: 0;
-    /*
-    animation: spin2 2s linear infinite;
-    -webkit-animation: spin2 2s linear infinite;
-*/
+
 }
 
 @-webkit-keyframes spin2 {
