--- a/style.css
+++ b/style.css
@@ -67,29 +67,45 @@
 }
 */
 
+.spinIcon {
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+
+}
+
 @-webkit-keyframes spin {
 
     0% {
+        stroke: #000;
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
+
     }
 
     100% {
+        stroke: #FFF;
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
+
     }
 }
 
 @keyframes spin {
 
     0% {
+        stroke: #000;
+
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
+
     }
 
     100% {
+        stroke: #FFF;
+
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
+
     }
 
 }
@@ -133,8 +149,10 @@
     left: 0;
     right: 0;
     position: absolute;
+
     animation: spin 4s linear infinite;
     -webkit-animation: spin 4s linear infinite;
+
     left: 44%;
     top: 20%;
 
