--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@
 }
 */
 
+.container {
+    display: flex;
+    margin-top: 3px;
+
+}
+
 .loader {
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
@@ -35,42 +41,6 @@
     position: absolute;
     top: 50%;
     width: 60px;
-}
-
-.loader2 {
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-    border: 3px solid #d8d8d8;
-    border-radius: 50%;
-    border-top-color: #2C2C2C;
-    box-sizing: border-box;
-    content: '';
-    height: 60px;
-    left: 44%;
-    margin-left: -10px;
-    margin-top: -10px;
-    position: absolute;
-    top: 38%;
-    width: 60px;
-}
-
-/*
-.loader {
-    border: 16px solid #9B9B9B;
-    border-top: 16px solid #2C2C2C;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-
-}
-*/
-
-.spinIcon {
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-
 }
 
 @-webkit-keyframes spin {
@@ -111,6 +81,46 @@
 }
 
 /*
+.loader2 {
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    border: 3px solid #d8d8d8;
+    border-radius: 50%;
+    border-top-color: #2C2C2C;
+    box-sizing: border-box;
+    content: '';
+    height: 60px;
+    left: 44%;
+    margin-left: -10px;
+    margin-top: -10px;
+    position: absolute;
+    top: 38%;
+    width: 60px;
+}
+*/
+
+/*
+.loader {
+    border: 16px solid #9B9B9B;
+    border-top: 16px solid #2C2C2C;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+
+}
+*/
+
+/*
+.spinIcon {
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+
+}
+*/
+
+/*
 .circular {
     animation: rotate 3.5s infinite;
 
@@ -141,6 +151,7 @@
 }
 */
 
+/*
 .donut {
     width: 76px;
     height: 76px;
@@ -180,13 +191,7 @@
     stroke-dasharray: 10 90;
     stroke-dashoffset: 0;
 
-}
-
-
-
-
-
-
+}*/
 
 /*
 .donut-segment2 {
