eInk grayscale test3

--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@
 
 }
 
+.container2 {
+    display: flex;
+
+}
+
 .loader {
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
